small layout issue with tabs

--- a/src/packages/modules/editorial-transition-b1/css/editorial-image-sequence.scss
+++ b/src/packages/modules/editorial-transition-b1/css/editorial-image-sequence.scss
@@ -204,6 +204,7 @@ $transitionSpeed: 0.5s;
       }
 
       &.label-right {
+        margin: 0 0 0 -4px;
         text-align: left;
       }
     }               
